--- a/Dockerfile.amd64
+++ b/Dockerfile.amd64
@@ -16,10 +16,7 @@
 # Part to build opendlv-device-gamepad.
 FROM alpine:3.7 as builder
 MAINTAINER Christian Berger "christian.berger@gu.se"
-RUN echo http://dl-4.alpinelinux.org/alpine/edge/main > /etc/apk/repositories && \
-    echo http://dl-4.alpinelinux.org/alpine/edge/community >> /etc/apk/repositories && \
-    echo http://dl-4.alpinelinux.org/alpine/edge/testing >> /etc/apk/repositories && \
-    apk update && \
+RUN apk update && \
     apk --no-cache add \
         cmake \
         g++ \
@@ -36,11 +33,6 @@ RUN mkdir build && \
 # Part to deploy opendlv-device-gamepad.
 FROM alpine:3.7
 MAINTAINER Christian Berger "christian.berger@gu.se"
-
-RUN echo http://dl-4.alpinelinux.org/alpine/edge/main > /etc/apk/repositories && \
-    echo http://dl-4.alpinelinux.org/alpine/edge/community >> /etc/apk/repositories && \
-    echo http://dl-4.alpinelinux.org/alpine/edge/testing >> /etc/apk/repositories && \
-    apk update
 
 WORKDIR /usr/bin
 COPY --from=builder /tmp/bin/opendlv-device-gamepad .
